# app/controllers/products/products.go
@@ -1,4 +1,4 @@
-package routes
+package products
 
 import (
 	"net/http"
@@ -6,6 +6,13 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+
+// ProductUpdate  Product Update
+//	@Description	Product update
+//	@Tags			ProductUpdate
+//	@Success		200	{string} string
+//	@Router			/product/{id} [patch]
+//	@Param			id path string true "id of product"
 func ProductUpdate(c echo.Context) error {
 	product_id := c.Param("id")
 	return c.String(http.StatusOK, product_id)
